fix: resolve 21 compilation errors across AURA ecosystem - De-Lombok, Stream Null-safety, and Interface sync